# Auth_sprint_2

./: .env.example  Dockerfile  README.md  cli.py  pyproject.toml
app/: exceptions.py  (+1 more)
auth_service/: .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
auth_service/app/: exceptions.py  main.py
auth_service/app/api/: api_router.py  error_decorators.py
auth_service/app/api/docs/: tags.py
auth_service/app/api/v1/: v1_router.py
auth_service/app/api/v1/auth/: auth_router.py
auth_service/app/api/v1/roles/: roles_router.py
auth_service/app/api/v1/users/: users_router.py
auth_service/app/core/: config.py  logs.py
auth_service/app/db/postgres/: base.py
auth_service/app/db/postgres/models/: base.py  users.py
auth_service/app/db/redis/: redis_repo.py
auth_service/app/schemas/services/auth/: role_service_schemas.py  user_service_schemas.py
auth_service/app/services/auth/: auth_service.py  registration_service.py  role_services.py  session_service.py  user_service.py  yandex_provider.py
auth_service/app/services/providers/: base_provider.py  provider_service.py  yandex_provider.py
auth_service/app/services/repositories/: role_repository.py  social_repository.py  user_repository.py  user_role_repository.py
auth_service/app/services/utils/: jwt_service.py
auth_service/app/utils/: jaeger.py
auth_service/app/utils/yandex_id/: yandex_id.py  yandex_id_schema.py
auth_service/infra/: .env.example  docker-compose.yml
auth_service/infra/nginx/: auth_app.conf
auth_service/migrations/: env.py
auth_service/migrations/versions/: 2024_06_26_1712-3c0a474d46c7_initial.py  2024_07_02_2212-f366b824f054_ondelete.py  2024_08_07_2011-2031320bc013_partitions.py  2024_08_15_0149-d1f73811ca78_add_social_account.py
auth_service/tests/: conftest.py  utils.py
auth_service/tests/api/v1/: conftest.py
auth_service/tests/api/v1/auth/: test_register.py
(+48 files in other folders)
